# FNet-Mixing-Tokens

./: README.md  pyproject.toml  requirements.txt
scripts/: benchmark.py  inference.py  train_ag_news.py
src/fnet_mixing/: __init__.py  data.py  model.py  train.py
src/fnet_mixing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_fnet_model.py
